Fix datagrid text overflow issue solve the problem of overlapping the line due to newly created inline characters (should used for 1.9.x) Signed-off-by: Yogi_Wang <yawang@vmware.com>

--- a/src/portal/src/app/project/helm-chart/list-charts-detail/helm-chart.component.scss
+++ b/src/portal/src/app/project/helm-chart/list-charts-detail/helm-chart.component.scss
@@ -67,8 +67,7 @@ $size60:60px;
 }
 
 .size-24 {
-    width:$size24;
-    height:$size24;
+    width: 60px;
 }
 
 .size-60 {
